--- a/CourseFeedback/WebContent/modules/course/courseList.xhtml
+++ b/CourseFeedback/WebContent/modules/course/courseList.xhtml
@@ -35,20 +35,14 @@
 
 				<!-- 				<h:column> -->
 				<!-- 					<f:facet name="header"> -->
-				<!-- 						<h:outputText value="Course Period" /> -->
-				<!-- 					</f:facet> -->
-				<!-- 					<h:outputText value="#{course.startTime}- #{course.endTime}" /> -->
-				<!-- 				</h:column> -->
-				<!-- 				<h:column> -->
-
-				<!-- 					<f:facet name="header"> -->
 				<!-- 						<h:outputText value="Submit Feedback" /> -->
 				<!-- 					</f:facet> -->
-				<!-- 					<h:outputLink value="give_feedback.xhtml"> -->
+				<!-- 					<h:outputLink value="/student/rate.xhtml"> -->
 				<!-- 						<f:param name="courseid" value="#{course.courseId}" /> -->
 				<!-- 						<h:outputText value="give feedback" /> -->
 				<!-- 					</h:outputLink> -->
 				<!-- 				</h:column> -->
+
 			</h:dataTable>
 		</c:when>
 
