--- a/CourseFeedback/WebContent/student/studentRegister.xhtml
+++ b/CourseFeedback/WebContent/student/studentRegister.xhtml
@@ -7,24 +7,36 @@
 	<title>Register Student</title>
 </h:head>
 <h:body>
-		<p id="wrapper">
-			<h:outputText value="Database contents:" /> :
-			<c:forEach items="#{studentManager.getAllStudents()}" var="Student">
-				<p>
-					<h:outputText value="#{Student.id}" /> : 
-					<h:outputText value="#{Student.studentNumber}" /> : 
-					<h:outputText value="#{Student.studentEmail}" /> : 
-					<h:outputText value="#{Student.studentKey}" /> : 
-					<h:outputLink value="#{studentManager.getStudentKeyLink(Student)}">#{studentManager.getStudentKeyLink(Student)}</h:outputLink>
-				</p>
-			</c:forEach>
-		</p>
-	
-	
+	<p id="wrapper">
+		<h:outputText value="Database contents:" />
+		:
+		<c:forEach items="#{studentManager.getAllStudents()}" var="Student">
+			<p>
+				<h:outputText value="#{Student.id}" />
+				:
+				<h:outputText value="#{Student.studentNumber}" />
+				:
+				<h:outputText value="#{Student.studentEmail}" />
+				:
+				<h:outputText value="#{Student.studentKey}" />
+				:
+				<h:outputLink value="#{studentManager.getStudentKeyLink(Student)}">#{studentManager.getStudentKeyLink(Student)}</h:outputLink>
+			</p>
+		</c:forEach>
+	</p>
+
+
 	<h:form>
-		<p>Student number: <h:inputText value="#{student.studentNumber}"></h:inputText> </p> 
-		<p><h:outputText value="#{studentManager.getLoginReply()}" /></p>
-		<h:commandButton type="submit" value="Register" action="#{studentManager.createKeyForStudent(student.studentNumber)}" update=":wrapper"></h:commandButton>		
+		<p>
+			Student number:
+			<h:inputText value="#{student.studentNumber}"></h:inputText>
+		</p>
+		<p>
+			<h:outputText value="#{studentManager.getLoginReply()}" />
+		</p>
+		<h:commandButton type="submit" value="Register"
+			action="#{studentManager.createKeyForStudent(student.studentNumber)}"
+			update=":wrapper"></h:commandButton>
 	</h:form>
 </h:body>
 </html>
