--- a/CourseFeedback/WebContent/modules/course/courseList.xhtml
+++ b/CourseFeedback/WebContent/modules/course/courseList.xhtml
@@ -2,7 +2,6 @@
 
 <!-- Params: -->
 <!-- courses: The list of courses to display -->
-<!-- coursePage: The name of the course page to redirect all courses -->
 
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
@@ -20,7 +19,7 @@
 						<h:outputText value="Code" />
 					</f:facet>
 
-					<h:link value="#{course.courseCode}" outcome="#{coursePage}">
+					<h:link value="#{course.courseCode}" outcome="/coursePage">
 						<f:param name="courseid" value="#{course.courseId}" />
 					</h:link>
 
@@ -32,17 +31,6 @@
 					</f:facet>
 					<h:outputText value="#{course.name}" />
 				</h:column>
-
-				<!-- 				<h:column> -->
-				<!-- 					<f:facet name="header"> -->
-				<!-- 						<h:outputText value="Submit Feedback" /> -->
-				<!-- 					</f:facet> -->
-				<!-- 					<h:outputLink value="/student/rate.xhtml"> -->
-				<!-- 						<f:param name="courseid" value="#{course.courseId}" /> -->
-				<!-- 						<h:outputText value="give feedback" /> -->
-				<!-- 					</h:outputLink> -->
-				<!-- 				</h:column> -->
-
 			</h:dataTable>
 		</c:when>
 
