--- a/CourseFeedback/WebContent/courseSelection.xhtml
+++ b/CourseFeedback/WebContent/courseSelection.xhtml
@@ -1,37 +1,38 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
+<!-- Displays course selection page in which students can select which course to give feedback to. -->
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:f="http://java.sun.com/jsf/core">
+
 
 <h:head>
 	<title>Course Select</title>
 </h:head>
-
 <h:body>
-	<ui:insert name="courseList">
-		<h1>My courses</h1>
-
-		<c:set var="parameter" scope="session"
-			value="#{studentManager.getParameter()}" />
-
-		<h:outputText
-			value="student id: #{studentManager.getCurrentStudentID()}" />
-
-		<br />
-		<h:outputText value="Select a course to give feedback to:" />
-		<br />
-
-		<ui:include src="/modules/course/courseList.xhtml">
-			<ui:param name="courses"
-				value="#{courseManager.getCoursesByStudentId(studentManager.getCurrentStudentID()) }" />
-		</ui:include>
-
-	</ui:insert>
-
+	<c:set var="parameter" scope="session"
+		value="#{studentManager.getParameter()}" />
+	<h:outputText
+		value="student id: #{studentManager.getCurrentStudentID()}" />
 	<br />
-	<ui:include src="/modules/footer.xhtml" />
+	<h:outputText value="Select a course to give feedback to:" />
 
+	<!-- courseManager.getCourses() method should be changed to one which only receives student's courses
+			studentId can be gotten by calling studentManager.getCurrentStudentID()
+			-->
+	<c:forEach
+		items="#{courseManager.getCoursesByStudentId(studentManager.getCurrentStudentID())}"
+		var="Cour">
+		<p>
+			<h:form>
+				<h:commandButton type="submit" value="#{Cour.name}"
+					action="#{studentManager.setCurrentCourse(Cour)}"></h:commandButton>
+			</h:form>
+		</p>
+	</c:forEach>
+	<h:form>
+		<h:commandButton type="submit" value="Back"
+			action="/student/studentRegister.xhtml"></h:commandButton>
+	</h:form>
 </h:body>
 </html>
