--- a/CourseFeedback/WebContent/modules/graphs/summaryGraph.xhtml
+++ b/CourseFeedback/WebContent/modules/graphs/summaryGraph.xhtml
@@ -1,25 +1,28 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
-<f:metadata>
-	<f:viewParam name="courseid" />
-</f:metadata>
+	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title>Summary Graph</title>
+	<title>Graph Module</title>
 </h:head>
 
 <h:body>
-	<p:layout style="min-width:400px;min-height:200px;" id="layout"
-		fullPage="true">
-		<p:layoutUnit position="center" resizable="true" size="300">
+
+	<!-- 	Params:  -->
+	<!-- 	graphName: Name of the graph -->
+	<!-- 	course: Course object-->
+	<ui:composition>
+		<p:panel header="#{graphName}">
 			<p:barChart id="basic"
-				value="#{feedbackSummary.createFeedbackSummaryModel(courseManager.getCourseById(courseid))}"
+				value="#{feedbackSummary.createFeedbackSummaryModel(course)}"
 				legendPosition="ne" title="" style="height:100%" />
-		</p:layoutUnit>
-	</p:layout>
+		</p:panel>
+	</ui:composition>
 </h:body>
+
 </html>
