--- a/CourseFeedback/WebContent/teacher/teacherRegistration.xhtml
+++ b/CourseFeedback/WebContent/teacher/teacherRegistration.xhtml
@@ -28,7 +28,7 @@
 			action="#{teacherRegistrationManager.register(teacher)}" />
 	</h:form>
 
-	<ui:include src="/modules/footer.xhtml" />
+	<ui:include src="/footer/footer.xhtml" />
 </h:body>
 </html>
 
