--- a/CourseFeedback/WebContent/footer/footer.xhtml
+++ b/CourseFeedback/WebContent/footer/footer.xhtml
@@ -5,5 +5,5 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<h:link value="Back to teacher index" outcome="/teacher/teacherHome" />
+	<h:link value="Back to teacher index" outcome="/teacher/teacherIndex" />
 </ui:composition>
