--- a/CourseFeedback/WebContent/header/teacherLogout.xhtml
+++ b/CourseFeedback/WebContent/header/teacherLogout.xhtml
@@ -4,23 +4,17 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<!-- Component displaying course information -->
-<!-- Params: -->
-<!-- courseParam -> course object to display information from -->
-
 <h:head>
-	<title>Course Info</title>
+	<title>Teacher Logout</title>
 </h:head>
 
 <h:body>
 	<ui:composition>
-		<h3>Name</h3>
-		<h:outputText value="#{courseParam.name}" />
-
-		<br />
-
-		<h3>Course code</h3>
-		<h:outputText value="#{courseParam.courseCode}" />
+		<h:form>
+			<h:commandButton value="Logout"
+				action="#{teacherLoginManager.logout()}" />
+		</h:form>
 	</ui:composition>
 </h:body>
+
 </html>
