Refactoring Feedback giving working from student side

--- a/CourseFeedback/WebContent/menu/studentMenu.xhtml
+++ b/CourseFeedback/WebContent/menu/studentMenu.xhtml
@@ -9,10 +9,7 @@
 </h:head>
 
 <h:body>
-	<h:link value="Home" />
-	<br />
-
-	<h:link value="Courses" />
+	<h:link value="Home" outcome="/student/courseSelection" />
 	<br />
 </h:body>
 
