--- a/CourseFeedback/WebContent/student/rateCourseItem.xhtml
+++ b/CourseFeedback/WebContent/student/rateCourseItem.xhtml
@@ -23,7 +23,7 @@
 				<H2>
 					Course item:
 					<h:outputText
-						value="#{courseItemManager.getCourseNameById(courseitemid)}" />
+						value="#{courseItemManager.getCourseItemNameById(courseitemid)}" />
 				</H2>
 				<br />
 
