--- a/CourseFeedback/WebContent/teacher/teacherCoursePage.xhtml
+++ b/CourseFeedback/WebContent/teacher/teacherCoursePage.xhtml
@@ -32,7 +32,8 @@
 
 			<ui:include src="/modules/courseitem/courseItemList.xhtml">
 				<ui:param name="courseItems" value="#{currentCourse.courseItems}" />
-				<ui:param name="courseItemPage" value="/student/rateCourseItem" />
+				<ui:param name="courseItemPage"
+					value="/teacher/teacherCourseItemPage" />
 			</ui:include>
 
 			<h:form>
