--- a/CourseFeedback/WebContent/test/graphTest.xhtml
+++ b/CourseFeedback/WebContent/test/graphTest.xhtml
@@ -14,7 +14,7 @@
 <h:body>
 	<ui:insert name="graphModule1">
 
-		<ui:include src="/modules/graphs/singleGraphModule.xhtml">
+		<ui:include src="/graphs/lineGraphModule.xhtml">
 			<ui:param name="graphName" value="Average" />
 			<ui:param name="data" value="#{feedbackBeanTest.feedbacks}" />
 		</ui:include>
