--- a/CourseFeedback/WebContent/graphs/lineGraphModule.xhtml
+++ b/CourseFeedback/WebContent/graphs/lineGraphModule.xhtml
@@ -20,7 +20,7 @@
 
 		<p:panel header="#{graphName}">
 			<p:lineChart legendPosition="ne" title=""
-				value="#{chartModelFactory.getFeedbackChartModel(data)}" />
+				value="#{chartModelFactory.createFeedbackChartModel(data)}" />
 		</p:panel>
 
 	</ui:composition>
