--- a/CourseFeedback/WebContent/student/rateCourseItem2.xhtml
+++ b/CourseFeedback/WebContent/student/rateCourseItem2.xhtml
@@ -10,29 +10,12 @@
 </f:metadata>
 
 <h:head>
-	<title>Rate Course Item</title>
+	<title>Rate Course Item 2</title>
 </h:head>
 
-<style>
-.ui-widget,.ui-widget .ui-widget {
-	font-size: 100% !important;
-}
-
-.ui-rating-star a,.ui-rating-on a {
-	height: 32px;
-	width: 32px;
-	background-size: 32px;
-}
-
-.ui-rating-star a {
-	background-position: 0 -64px;
-}
-
-.ui-rating-star-on a {
-	background-position: 0 -96px;
-}
-</style>
 <h:body>
+	<h:outputStylesheet library="css" name="main.css" />
+
 	<p:layout style="min-width:400px;min-height:200px;" id="layout"
 		fullPage="true">
 		<p:layoutUnit position="center" resizable="true" size="300">
